# Converterrier

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  temp_next_steps.md
docs/superpowers/plans/: 2026-03-27-converterrier.md
docs/superpowers/specs/: 2026-03-27-converterrier-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/assets/: styles.css
frontend/src/components/: BatchMode.vue  ConvertButton.vue  FileUpload.vue  FormatSelector.vue  SettingsPanel.vue
src/converterrier/: __init__.py  app.py  cli.py  models.py  tools.py
src/converterrier/converters/: __init__.py  audio.py  base.py  document.py  image.py  video.py
src/converterrier/routes/: convert.py  formats.py  health.py
tests/: test_cli.py  test_tools.py
tests/test_converters/: test_audio.py  test_document.py  test_image.py  test_registry.py  test_video.py
tests/test_routes/: test_convert.py  test_formats.py  test_health.py
