[project]
name = "converterrier"
version = "0.1.0"
description = "Local file format converter - images, video, audio, documents"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "pillow>=10.0",
    "python-multipart>=0.0.6",
]

[project.scripts]
converterrier = "converterrier.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/converterrier"]

[tool.pytest.ini_options]
testpaths = ["tests"]
